Make tests pass by ignoring jar-file-related classes